熊とワルツを追記

--- a/content/portfolio/熊とワルツを.md
+++ b/content/portfolio/熊とワルツを.md
@@ -8,4 +8,63 @@ description = "書籍『熊とワルツを』のまとめ"
 tags = ["本", "プロジェクト管理"]
 +++
 
-## 序章
+## 第1部 なぜリスクを管理するのか
+
+### 第1章 リスクに立ち向かう
+
+__**"リスクのないプロジェクトには手をつけるな"**__  
+
+### 第2章 リスク管理は大人のプロジェクト管理だ  
+
+リスク
+1. 将来**起こりうる出来事で、望まない結果を生むもの**  
+1. 望まない結果そのもの  
+  
+リスク管理における費用は無駄に終わることもある(全てがうまくいった場合)  
+  
+リスク管理の各要素
+
+- **リスク発見**…まずリスクに関するブレーンストーミングを行い、正しくリスクを選別し、さらにプロセスを継続する仕組みを導入する  
+- **エクスポージャー分析**…それぞれのリスクが実現する確率と、それによる影響を数量化する
+- **危機対応計画**…リスクが実現した場合に何をすべきか計画する
+- **軽減**…計画した危機対応措置が必要な時に実現でき、効力を持つように移行前にとるべき対策を取る
+- **計測的な移行監視**…管理するリスクを追跡し、実現するかどうかを監視する
+
+
+### 第3章 デンバー空港再考
+
+### 第4章 リスクを管理すべき理由
+
+- 積極的にリスクを取れる
+- 不意打ちを防ぐ
+- 成功するプロジェクトを作る
+- 不確定要素を限りあるものにする
+- 最小限のコストによる保険である
+- 目に見えない責任転嫁を防ぐ
+- 一部が失敗したプロジェクトを救える
+- 人材の成長機会を高める
+- 管理者への不意打ちを防ぐ
+- 注意すべきところに注意を向ける
+
+## 第2部 なぜリスクを管理しないのか
+
+### 第5章 リスクを管理すべきでない理由
+
+1. 発注者がリスクに直面できるほど成熟していない
+1. 不確定範囲が広すぎる
+1. はっきり不確定幅を決めると、出来の悪い仕事を許すことになる
+1. 「成功のための管理」の方があてになる
+1. リスク管理を有効に行う為に必要なデータが不足している
+1. 単独でリスク管理をするのは危険である
+
+
+### 第6章 不確定性への非難
+
+__**"間違えるのは構わないが、不確かなのは駄目だ"**__
+
+### 第7章 運
+
+## 第3部 リスク管理の方法
+
+### 第8章 不確定性を数量化する
+
