--- a/content/portfolio/ポートフォリオを作る.md
+++ b/content/portfolio/ポートフォリオを作る.md
@@ -5,7 +5,7 @@ showonlyimage = false
 title = "ポートフォリオを作る"
 date = "2021-06-14T22:12:03.284Z"
 description = "Nuxt.js + TypeScript + Docker + CreatJS + Netlifyで曲者ポートフォリオを作りたい"
-tags = ["ポートフォリオ"]
+tags = ["ポートフォリオ","Nuxt.js","TypeScript","docker","Netlify"]
 +++
 
 ポートフォリオサイトを作りたい。
@@ -17,3 +17,4 @@ tags = ["ポートフォリオ"]
 - [ ] テンプレートを探して適応する
 - [ ] CreatJSで文字、レイアウトをシューティングゲーム化する
 - [ ] Netlifyでデプロイする
+- [ ] Jest
