OSS貢献に関するページ追加

--- a/content/portfolio/スーパーエンジニアへの道.md
+++ b/content/portfolio/スーパーエンジニアへの道.md
@@ -1,6 +1,6 @@
 +++
 draft = false
-image = "img/portfolio/hpp.jpeg"
+image = ""
 showonlyimage = false
 title = "『スーパーエンジニアへの道』まとめ"
 date = "2021-06-28T22:12:03.284Z"
